<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.sample.app2.MainActivity">


        <TextView
            android:text="@string/sign_in_heading"
            style="@style/heading_style" />

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/email_et_hint"
            android:inputType="textEmailAddress"
            style="@style/et_style" />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password_et_hint"
            android:layout_marginTop="0dp"
            android:inputType="textPassword"
            style="@style/et_style" />

        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_btn"/>
            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_btn"/>

        </android.support.v7.widget.ButtonBarLayout>


</LinearLayout>
